--- a/app/src/main/res/layout/nowlayout_main.xml
+++ b/app/src/main/res/layout/nowlayout_main.xml
@@ -10,7 +10,7 @@
         android:background="#e3e3e3"
         android:orientation="vertical" >
         <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button"
+            android:id="@+id/login_button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -57,8 +57,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="오늘 평균 칼로리 : 600Kcal"
-                android:textStyle="bold"
-                android:textSize="20dp"
+
+                android:textSize="17dp"
                 android:layout_marginLeft="30dp"
                 tools:context=".MainActivity" />
             <TextView
@@ -66,64 +66,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="오늘 먹은 칼로리 : 500Kcal"
-                android:textStyle="bold"
-                android:textSize="20dp"
+
+                android:textSize="17dp"
                 android:layout_marginLeft="30dp"
                 tools:context=".MainActivity" />
         </LinearLayout>
         <!-- My Profile Card END-->
 
         <!-- Sample Card -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            style="@style/nowCardStyle"
-            android:gravity="top"
-            >
 
-            <TextView
-
-                android:gravity="right"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="07.21 14:15"
-                android:textSize="12dp"
-                android:layout_marginLeft="30dp"
-                tools:context=".MainActivity" />
-            <LinearLayout
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-
-                >
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Zinger Burger (300Kcal)"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-
-                    android:gravity="left"
-                    tools:context=".MainActivity" />
-
-
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="배가....부르다.. 쿰척쿰척"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_marginLeft="30dp"
-                tools:context=".MainActivity" />
-        </LinearLayout>
-
+        <!-- Sample Card -->
 
 
         <TextView
