--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -1,5 +1,20 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menu_refresh" android:orderInCategory="101" android:showAsAction="always" android:title="@string/menu_refresh"></item>
+    <item
+        android:id="@+id/menu_refresh"
+        android:orderInCategory="101"
+        app:showAsAction="always"
+        android:title="@string/menu_refresh"></item>
 
+    <item
+        android:id="@+id/action_write"
+        android:icon="@drawable/ic_create"
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_autorenew"
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom" />
 </menu>
