--- a/HealthByMe-Android/app/src/main/res/layout/nowlayout_main.xml
+++ b/HealthByMe-Android/app/src/main/res/layout/nowlayout_main.xml
@@ -42,7 +42,7 @@
                     app:civ_border_width="2dp"
                     app:civ_border_color="#FF000000"/>
                 <TextView
-                    android:id="@+id/txtView1"
+                    android:id="@+id/tv_profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Suchang Ko"
